--- a/webviewtopdf/build.gradle
+++ b/webviewtopdf/build.gradle
@@ -10,6 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdk 34
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
@@ -21,7 +23,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    namespace 'com.webviewtopdf'
 
 }
 
